# MockVLM

./: .env.example  .gitignore  README.md  pyproject.toml
data/sample/: README.md
docs/: model_selection.md  research_protocol.md
scripts/: generate_synthetic_video.py  run_research_matrix.py
src/privacy_vlm_poc/: __init__.py  analyzer.py  cli.py  config.py  evaluation.py  masking.py  model_selection.py  sampling.py  schemas.py  ui.py  video_io.py  vlm_client.py
tests/: test_bootstrap.py  test_masking.py  test_sampling.py  test_schemas.py  test_vlm_client.py
