[project]
name = "privacy-vlm-poc"
version = "0.1.0"
description = "PoC for limited-visual-information smart-home object-interaction suspicion analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "gradio>=4.44",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
privacy-vlm-poc = "privacy_vlm_poc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/privacy_vlm_poc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
